--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>1.2.43</version>
+    <version>1.2.44</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,7 +33,7 @@
     </scm>
 
     <properties>
-        <revision>1.2.43</revision>
+        <revision>1.2.44</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -41,24 +41,24 @@
         <!--        spring start-->
         <spring-boot.version>3.2.4</spring-boot.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
-        <spring-cloud-tencent.version>1.13.1-2023.0.0</spring-cloud-tencent.version>
+        <spring-cloud-tencent.version>1.14.0-2023.0.0-RC1</spring-cloud-tencent.version>
         <spring-cloud-alibaba.version>2023.0.0.0-RC1</spring-cloud-alibaba.version>
         <!--        spring end-->
 
-        <mybatis-flex.version>1.8.6</mybatis-flex.version>
+        <mybatis-flex.version>1.8.7</mybatis-flex.version>
         <hutool.version>6.0.0-M11</hutool.version>
-        <alipay.version>4.39.31.ALL</alipay.version>
+        <alipay.version>4.39.42.ALL</alipay.version>
         <alipay-easy.version>2.2.3</alipay-easy.version>
         <wx-java.version>4.6.1.B</wx-java.version>
         <dubbo.version>3.2.11</dubbo.version>
-        <polaris.version>0.3.1-3.2.7</polaris.version>
+        <polaris.version>0.3.2-3.2.7</polaris.version>
         <sa-token.version>1.37.0</sa-token.version>
         <forest.version>1.5.36</forest.version>
-        <aws.version>2.25.26</aws.version>
+        <aws.version>2.25.32</aws.version>
         <flowable.version>7.0.1</flowable.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-        <maven-gpg-plugin.version>3.2.2</maven-gpg-plugin.version>
+        <maven-gpg-plugin.version>3.2.3</maven-gpg-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
