--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.4.1.2</version>
+    <version>3.4.1.4</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,7 +33,7 @@
     </scm>
 
     <properties>
-        <revision>3.4.1.2</revision>
+        <revision>3.4.1.4</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -46,13 +46,13 @@
 
         <mybatis-flex.version>1.10.5</mybatis-flex.version>
         <hutool.version>6.0.0-M19</hutool.version>
-        <alipay.version>4.40.33.ALL</alipay.version>
-        <fastexcel.version>1.0.0</fastexcel.version>
-        <wx-java.version>4.7.0</wx-java.version>
+        <alipay.version>4.40.49.ALL</alipay.version>
+        <fastexcel.version>1.1.0</fastexcel.version>
+        <wx-java.version>4.7.1.B</wx-java.version>
         <dubbo.version>3.3.2</dubbo.version>
         <sa-token.version>1.39.0</sa-token.version>
         <forest.version>1.6.3</forest.version>
-        <aws.version>2.29.49</aws.version>
+        <aws.version>2.30.3</aws.version>
         <flowable.version>7.1.0</flowable.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
@@ -61,7 +61,7 @@
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
         <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
-        <central-publishing-maven-plugin.version>0.6.0</central-publishing-maven-plugin.version>
+        <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
         <!--        build end-->
     </properties>
     <dependencyManagement>
