--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.4.2.1</version>
+    <version>3.4.2.2</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,8 +33,8 @@
     </scm>
 
     <properties>
-        <revision>3.4.2.1</revision>
-        <java.version>17</java.version>
+        <revision>3.4.2.2</revision>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,16 +44,16 @@
         <spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
         <!--        spring end-->
 
-        <mybatis-flex.version>1.10.5</mybatis-flex.version>
+        <mybatis-flex.version>1.10.6</mybatis-flex.version>
         <hutool.version>6.0.0-M19</hutool.version>
-        <alipay.version>4.40.49.ALL</alipay.version>
+        <alipay.version>4.40.54.ALL</alipay.version>
         <fastexcel.version>1.1.0</fastexcel.version>
-        <wx-java.version>4.7.1.B</wx-java.version>
-        <dubbo.version>3.3.2</dubbo.version>
-        <sa-token.version>1.39.0</sa-token.version>
+        <wx-java.version>4.7.2.B</wx-java.version>
+        <dubbo.version>3.3.3</dubbo.version>
+        <sa-token.version>1.40.0</sa-token.version>
         <forest.version>1.6.3</forest.version>
-        <aws.version>2.30.5</aws.version>
-        <flowable.version>7.1.0</flowable.version>
+        <aws.version>2.30.16</aws.version>
+        <warm-flow.version>1.6.6</warm-flow.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
@@ -122,16 +122,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-            <dependency>
-                <groupId>org.flowable</groupId>
-                <artifactId>flowable-bom</artifactId>
-                <version>${flowable.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
             <!--dependencies-->
-
+            <dependency>
+                <groupId>org.dromara.warm-flow-mybatis-flex</groupId>
+                <artifactId>warm-flow-mybatis-flex-sb3-starter</artifactId>
+                <version>${warm-flow.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-dependencies-zookeeper-curator5</artifactId>
