--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.4.5.2</version>
+    <version>3.5.0.1</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,23 +33,24 @@
     </scm>
 
     <properties>
-        <revision>3.4.5.2</revision>
+        <revision>3.5.0.1</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--        spring start-->
-        <spring-boot.version>3.4.5</spring-boot.version>
+        <spring-boot.version>3.5.0</spring-boot.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
         <spring-cloud-alibaba.version>2023.0.3.2</spring-cloud-alibaba.version>
         <!--        spring end-->
 
         <mybatis-flex.version>1.10.9</mybatis-flex.version>
         <hutool.version>6.0.0-M21</hutool.version>
-        <alipay.version>4.40.217.ALL</alipay.version>
+        <alipay.version>4.40.237.ALL</alipay.version>
         <fastexcel.version>1.2.0</fastexcel.version>
-        <wx-java.version>4.7.5-20250516.201941</wx-java.version>
+        <wx-java.version>4.7.5-20250528.161554</wx-java.version>
         <dubbo.version>3.3.4</dubbo.version>
+        <jeepay.version>max-3.8.7</jeepay.version>
         <sa-token.version>1.43.0</sa-token.version>
         <forest.version>1.6.4</forest.version>
         <aws.version>2.28.24</aws.version>
@@ -121,6 +122,11 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jeequan</groupId>
+                <artifactId>jeepay-sdk-java</artifactId>
+                <version>${jeepay.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
