为多个模块的pom.xml文件添加名称属性

--- a/spring-boot-starter-alipay/pom.xml
+++ b/spring-boot-starter-alipay/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>spring-ex</artifactId>
         <version>3.5.0.2</version>
     </parent>
+    <name>spring-boot-starter-alipay</name>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
     <description>支付宝api starter</description>
     <version>3.5.0.2</version>
