--- a/spring-boot-starter-wx-mini-app/pom.xml
+++ b/spring-boot-starter-wx-mini-app/pom.xml
@@ -9,6 +9,7 @@
         <version>3.5.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <name>spring-boot-starter-wx-mini-app</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-boot-starter-wx-mini-app</artifactId>
