--- a/spring-boot-starter-oss/pom.xml
+++ b/spring-boot-starter-oss/pom.xml
@@ -9,6 +9,7 @@
         <version>3.5.0.2</version>
     </parent>
     <version>3.5.0.2</version>
+    <name>spring-boot-starter-oss</name>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
     <description>spring enhance pack</description>
 
