--- a/spring-boot-starter-wx-pay/pom.xml
+++ b/spring-boot-starter-wx-pay/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>spring-ex</artifactId>
         <version>3.5.0.2</version>
     </parent>
+    <name>spring-boot-starter-wx-pay</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-boot-starter-wx-pay</artifactId>
