--- a/spring-cloud-starter-auth/pom.xml
+++ b/spring-cloud-starter-auth/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>spring-ex</artifactId>
         <version>3.5.0.2</version>
     </parent>
+    <name>spring-cloud-starter-auth</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-cloud-starter-auth</artifactId>
