--- a/spring-ex-common-model/pom.xml
+++ b/spring-ex-common-model/pom.xml
@@ -6,9 +6,9 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.0.2</version>
+        <version>3.5.0.3</version>
     </parent>
-    <name>spring-ex-common-model</name>
+    <name>spr3.5.0.3common-model</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-ex-common-model</artifactId>
