--- a/spring-boot-starter-wx-mini-app/pom.xml
+++ b/spring-boot-starter-wx-mini-app/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.0.2</version>
+        <version>3.5.0.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <name>spring-boot-starter-wx-mini-app</name>
+    <name>spr3.5.0.3t-starter-wx-mini-app</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-boot-starter-wx-mini-app</artifactId>
