--- a/spring-boot-starter-wx-pay/pom.xml
+++ b/spring-boot-starter-wx-pay/pom.xml
@@ -6,9 +6,9 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.0.2</version>
+        <version>3.5.0.3</version>
     </parent>
-    <name>spring-boot-starter-wx-pay</name>
+    <name>spr3.5.0.3t-starter-wx-pay</name>
     <version>3.5.0.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-boot-starter-wx-pay</artifactId>
