--- a/spring-boot-starter-alipay/pom.xml
+++ b/spring-boot-starter-alipay/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.0.3</version>
+        <version>3.5.3.1</version>
     </parent>
     <name>spring-boot-starter-alipay</name>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
-    <descript3.5.0.3api starter</description>
-    <version>3.5.0.2</version>
+    <description>spring-boot-starter-alipay</description>
+    <version>3.5.3.1</version>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
