--- a/spring-boot-starter-wx-mini-app/pom.xml
+++ b/spring-boot-starter-wx-mini-app/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.0.3</version>
+        <version>3.5.3.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <name>spr3.5.0.3t-starter-wx-mini-app</name>
-    <version>3.5.0.2</version>
+    <name>spring-boot-starter-wx-mini-app</name>
+    <version>3.5.3.1</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-boot-starter-wx-mini-app</artifactId>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
