升级版本至3.5.4.1，更新多个模块的pom.xml文件，修复VS Code配置，调整依赖版本

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic",
-    "maven.view": "hierarchical"
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "maven.view": "hierarchical",
+  "java.compile.nullAnalysis.mode": "automatic"
 }
