--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.5.4.3</version>
+    <version>3.5.5.1</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,36 +33,36 @@
     </scm>
 
     <properties>
-        <revision>3.5.4.3</revision>
+        <revision>3.5.5.1</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--        spring start-->
-        <spring-boot.version>3.5.4</spring-boot.version>
+        <spring-boot.version>3.5.5</spring-boot.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
-        <spring-cloud-alibaba.version>2023.0.3.3</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2025.0.0.0-preview</spring-cloud-alibaba.version>
         <!--        spring end-->
 
         <mybatis-flex.version>1.11.1</mybatis-flex.version>
         <hutool.version>6.0.0-M22</hutool.version>
-        <alipay.version>4.40.393.ALL</alipay.version>
-        <fastexcel.version>1.2.0</fastexcel.version>
-        <wx-java.version>4.7.7-20250808.182223</wx-java.version>
+        <alipay.version>4.40.440.ALL</alipay.version>
+        <fastexcel.version>1.3.0</fastexcel.version>
+        <wx-java.version>4.7.7-20250904.091948</wx-java.version>
         <dubbo.version>3.3.5</dubbo.version>
         <jeepay.version>max-3.8.9</jeepay.version>
         <sa-token.version>1.44.0</sa-token.version>
         <forest.version>1.7.3</forest.version>
         <aws.version>2.28.24</aws.version>
-        <warm-flow.version>1.8.0</warm-flow.version>
-        <warm-flow-flex.version>1.8.0</warm-flow-flex.version>
+        <warm-flow.version>1.8.1</warm-flow.version>
+        <warm-flow-flex.version>1.8.1</warm-flow-flex.version>
         <poi.version>5.4.1</poi.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
         <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.11.3</maven-javadoc-plugin.version>
         <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
         <central-publishing-maven-plugin.version>0.8.0</central-publishing-maven-plugin.version>
         <!--        build end-->
