--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex</artifactId>
-    <version>3.5.5.1</version>
+    <version>3.5.5.2</version>
     <packaging>pom</packaging>
 
     <name>spring-ex</name>
@@ -43,11 +43,12 @@
         <module>spring-cloud-starter-auth</module>
         <module>spring-boot-starter-oss</module>
         <module>spring-boot-starter-web</module>
+        <module>spring-boot-starter-data-jpa</module>
     </modules>
 
 
     <properties>
-        <revision>3.5.5.1</revision>
+        <revision>3.5.5.2</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
