--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.5.5.1</version>
+    <version>3.5.5.2</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,7 +33,7 @@
     </scm>
 
     <properties>
-        <revision>3.5.5.1</revision>
+        <revision>3.5.5.2</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -230,6 +230,11 @@
             <dependency>
                 <groupId>com.guanmengyuan.spring-ex</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.guanmengyuan.spring-ex</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
