升级版本至3.5.7.2，更新多个模块的pom.xml文件，调整依赖版本，修复hutool依赖的groupId，增强兼容性

--- a/spring-boot-starter-web/pom.xml
+++ b/spring-boot-starter-web/pom.xml
@@ -6,9 +6,9 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.7.1</version>
+        <version>3.5.7.2</version>
     </parent>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <name>spring-boot-starter-web</name>
     <description>spring enhance pack</description>
 
@@ -74,15 +74,15 @@
             <artifactId>spring-ex-common-model</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-extra</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
         <dependency>
