--- a/spring-boot-starter-alipay/pom.xml
+++ b/spring-boot-starter-alipay/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.7.1</version>
+        <version>3.5.7.2</version>
     </parent>
     <name>spring-boot-starter-alipay</name>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
     <description>spring-boot-starter-alipay</description>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -52,7 +52,7 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
         <dependency>
@@ -64,7 +64,7 @@
             <artifactId>alipay-sdk-java</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
     </dependencies>
