--- a/spring-boot-starter-oss/pom.xml
+++ b/spring-boot-starter-oss/pom.xml
@@ -6,9 +6,9 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.7.1</version>
+        <version>3.5.7.2</version>
     </parent>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <name>spring-boot-starter-oss</name>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
     <description>spring enhance pack</description>
@@ -65,7 +65,7 @@
             <artifactId>spring-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
     </dependencies>
