--- a/spring-cloud-starter-auth/pom.xml
+++ b/spring-cloud-starter-auth/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.7.1</version>
+        <version>3.5.7.2</version>
     </parent>
     <name>spring-cloud-starter-auth</name>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-cloud-starter-auth</artifactId>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
@@ -59,11 +59,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-extra</artifactId>
         </dependency>
     </dependencies>
