--- a/spring-ex-common-model/pom.xml
+++ b/spring-ex-common-model/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>3.5.7.1</version>
+        <version>3.5.7.2</version>
     </parent>
     <name>spring-ex-common-model</name>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-ex-common-model</artifactId>
     <url>https://github.com/Guan-Meng-Yuan/spring-ex</url>
@@ -71,7 +71,7 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool.v7</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
         <dependency>
