--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.5.7.1</version>
+    <version>3.5.7.2</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,7 +33,7 @@
     </scm>
 
     <properties>
-        <revision>3.5.7.1</revision>
+        <revision>3.5.7.2</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -45,12 +45,12 @@
         <!--        spring end-->
 
         <mybatis-flex.version>1.11.3</mybatis-flex.version>
-        <hutool.version>6.0.0-M22</hutool.version>
-        <alipay.version>4.40.483.ALL</alipay.version>
+        <hutool.version>7.0.0-M2</hutool.version>
+        <alipay.version>4.40.498.ALL</alipay.version>
         <fastexcel.version>1.3.0</fastexcel.version>
-        <wx-java.version>4.7.8-20251023.110018</wx-java.version>
+        <wx-java.version>4.7.8-20251102.163029</wx-java.version>
         <dubbo.version>3.3.5</dubbo.version>
-        <jeepay.version>max-3.8.11</jeepay.version>
+        <jeepay.version>max-3.8.12</jeepay.version>
         <sa-token.version>1.44.0</sa-token.version>
         <forest.version>1.8.0</forest.version>
         <aws.version>2.28.24</aws.version>
@@ -91,7 +91,7 @@
                 <type>pom</type>
             </dependency>
             <dependency>
-                <groupId>org.dromara.hutool</groupId>
+                <groupId>cn.hutool.v7</groupId>
                 <artifactId>hutool-bom</artifactId>
                 <version>${hutool.version}</version>
                 <type>pom</type>
